[project]
name = "steadyfetch"
version = "0.1.0"
description = "Reliable web fetching for AI agents — MCP server with retry, circuit breaker, caching, and anti-bot bypass"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "mcp[cli]>=1.26.0",
    "crawl4ai>=0.8.0",
    "httpx>=0.27.0",
    "diskcache>=5.6.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.30.0",
]

[project.scripts]
steadyfetch = "steadyfetch.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["steadyfetch"]
